# video-time

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  timecode.py
src/videotime/: timecode.py
src/videotime/models/: time_models.py
tests/: test_time_models.py  test_timecode.py
tests/unit/: __init__.py
